Example con la grilla de bootstrap

--- a/grilla.html
+++ b/grilla.html
@@ -11,10 +11,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>Practica con la grilla de bootstrap</title>
   </head>
   <body>
-    <!-- <div class="container mt-5">
+    <div class="container mt-5">
       <div class="row">
         <div class="col de"></div>
         <div class="col de"></div>
@@ -46,8 +46,8 @@
       <div class="row">
         <div class="col de"></div>
       </div>
-    </div> -->
-    <!-- <div class="container mt-5 mb-5">
+    </div>
+    <div class="container mt-5 mb-5">
       <div class="row">
         <div class="col-md-3 col-sm-3 col-6 de"></div>
         <div class="col-md-3 col-sm-3 col-6 de"></div>
@@ -66,7 +66,7 @@
         <div class="col-md col-sm-6 col-12 de"></div>
         <div class="col-md col-sm-6 col-12 de"></div>
       </div>
-    </div> -->
+    </div>
     <div class="container mt-5 mb-5">
       <div class="row">
         <div class="col-md-6 offset-md-6 de"></div>
