add new columns

--- a/grilla.html
+++ b/grilla.html
@@ -24,6 +24,21 @@
         <div class="col de"></div>
         <div class="col de"></div>
         <div class="col de"></div>
+      </div>
+      <div class="row">
+        <div class="col de"></div>
+        <div class="col de"></div>
+        <div class="col de"></div>
+      </div>
+      <div class="row">
+        <div class="col de"></div>
+        <div class="col de"></div>
+        <div class="col de"></div>
+      </div>
+      <div class="row">
+        <div class="col de"></div>
+        <div class="col de"></div>
+        <div class="col de"></div>
         <div class="col de"></div>
         <div class="col de"></div>
         <div class="col de"></div>
