--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>Changed Footer</title>
   </head>
   <body>
     <!-- HEADER -->
